--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -3,8 +3,22 @@
     align-items: center;
     flex-direction: column;
 }
-.container > h1{
+.container > header{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 84px 0 24px;
+}
+.container header img{
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    margin-left: 7px;
+}
+.container header div{
+    display: flex;
+    align-items: center;
 }
 .container input{
     width: 50%;
